<resources>
    <string name="app_name">MyHomework1_JC</string>
    <string name="action_settings">Settings</string>
    <string name="changecontact">Zmień kontakt</string>
    <string name="changesound">Zmień dźwięk</string>
    <string name="placeholder">Place Holder</string>
    <string name="Contact1">John Doe</string>
    <string name="Contact2">Jane Doe</string>
    <string name="Contact3">Jan Kowalski</string>
    <string name="Contact4">Krystyna Kowalska</string>
    <string name="Contact5">Jacek Chomiuk</string>

    <string name="set_sound">Ustaw dźwięk kontaktu</string>
    <string name="set_contact">Wybierz kontakt</string>
    <string name="contacts_text">Kontakty</string>
    <string-array name="Sounds">
        <item>Sound 1</item>
        <item>Sound 2</item>
        <item>Sound 3</item>
        <item>Sound 4</item>
        <item>Sound 5</item>
    </string-array >
    <string-array name="Contacts">
        <item>John Doe</item>
        <item>Jane Doe</item>
        <item>Jan Kowalski</item>
        <item>Krystyna Kowalska</item>
        <item>Jacek Chomiuk</item>
    </string-array >
    <string name="back_message">#BACK_MESSAGE</string>
</resources>
